--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.5.jar=itextpdf-5.5.5.jar
+file.reference.itextpdf-5.5.5.jar-1=C:\\Users\\MAHANKALI SAKETH\\Downloads\\itextpdf-5.5.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.itextpdf-5.5.5.jar}
+    ${file.reference.itextpdf-5.5.5.jar}:\
+    ${file.reference.itextpdf-5.5.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
